# travel_ask

./: .gitignore  Dtravel_data.env  main.py  pyproject.toml  start.ps1  stop.ps1
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py
app/core/: context.py  lifespan.py  log.py
app/models/es/: value_info_es.py
app/models/mysql/: column_info_mysql.py  metric_info_mysql.py  table_info_mysql.py
app/models/qdrant/: __init__.py
app/prompt/: prompt_loader.py
app/repositories/es/: values_es_repository.py
app/repositories/mysql/: dw_mysql_repository.py  meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml  meta_config.yaml
docker/mysql/: dw.sql  meta.sql
frontend/: index.html
frontend/src/: App.vue
prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt  plan_sql.prompt
