[project]
name = "travel-ask"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=49.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.138.0",
    "huggingface-hub>=1.20.1",
    "jieba>=0.42.1",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "omegaconf>=2.3.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
]
